# canopen

./: .gitignore  README.rst  makedeb  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: pythonpackage.yml
canopen/: emcy.py  lss.py  network.py  nmt.py  sync.py  timestamp.py  utils.py  variable.py
canopen/node/: __init__.py  base.py  local.py  remote.py
canopen/objectdictionary/: __init__.py  datatypes.py  eds.py  epf.py  objectcodes.py  xdd.py
canopen/pdo/: __init__.py  base.py
canopen/profiles/: p402.py
canopen/profiles/tools/: test_p402_states.py
canopen/sdo/: __init__.py  base.py  client.py  constants.py  exceptions.py  server.py
doc/: conf.py  lss.rst
examples/: simple_ds402_node.py
test/: sample.eds  sample.xdd  test_eds.py  test_emcy.py  test_local.py  test_lss.py  test_network.py  test_nmt.py  test_node.py  test_od.py  test_p402.py  test_pdo.py  test_sdo.py  test_sync.py  test_time.py  test_utils.py  test_variable.py  test_xdd.py  util.py
